--- a/package.json
+++ b/package.json
@@ -1,23 +1,29 @@
 {
-  "name": "jjl-abacus",
+  "name": "Novasphere",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.3",
+    "@hello-pangea/dnd": "^18.0.1",
     "@mantine/core": "^7.5.1",
     "@mantine/dates": "^7.5.1",
     "@mantine/form": "^7.5.1",
     "@mantine/hooks": "^7.5.1",
     "@mantine/notifications": "^7.5.1",
+    "@tailwindcss/postcss": "^4.0.15",
     "@vitejs/plugin-react-swc": "^3.6.0",
+    "axios": "^1.8.4",
     "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
+    "postcss": "^8.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
+    "sonner": "^2.0.1",
+    "tailwindcss": "^4.0.15",
     "zustand": "^4.5.0"
   },
   "scripts": {
